fix: [NUTR-119] - refactor find all patients
