# swagger-output.json
@@ -46,171 +46,6 @@
     "application/json"
   ],
   "paths": {
-    "/patient/create": {
-      "post": {
-        "tags": [
-          "Patient"
-        ],
-        "summary": "Returns patient created",
-        "description": "Endpoint to create patient",
-        "parameters": [
-          {
-            "name": "patient",
-            "in": "body",
-            "description": "Patient information to create",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/TCreatePatient"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/TPatient"
-            },
-            "description": "Patient created successfully."
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/ErrorFieldResponse"
-            },
-            "description": "Missing fields or invalid fields."
-          },
-          "404": {
-            "description": "Email already in use"
-          }
-        }
-      }
-    },
-    "/patient/": {
-      "get": {
-        "tags": [
-          "Patient"
-        ],
-        "summary": "Returns all patient",
-        "description": "Endpoint to find all patient",
-        "operationId": "findAllPatient",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/patient/{id}": {
-      "get": {
-        "tags": [
-          "Patient"
-        ],
-        "summary": "Returns patient by user id",
-        "description": "Endpoint to find patient by user id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Patient"
-        ],
-        "summary": "Returns patient deleted",
-        "description": "Endpoint to delete patient",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "Patient id to delete"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Patient deleted successfully."
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/ErrorFieldResponse"
-            },
-            "description": "Missing fields or invalid fields."
-          },
-          "404": {
-            "description": "Patient not found"
-          }
-        }
-      }
-    },
-    "/patient/update/{id}": {
-      "put": {
-        "tags": [
-          "Patient"
-        ],
-        "summary": "Returns patient updated",
-        "description": "Endpoint to update patient",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "Patient id to update"
-          },
-          {
-            "name": "patient",
-            "in": "body",
-            "description": "Patient information to update",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/TUpdatePatient"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/TPatient"
-            },
-            "description": "Patient updated successfully."
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/ErrorFieldResponse"
-            },
-            "description": "Missing fields or invalid fields."
-          },
-          "404": {
-            "description": "Patient not found"
-          }
-        }
-      }
-    },
-    "/user/recover": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "summary": "Returns user recovered",
-        "description": "Endpoint to recover user",
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/TUser"
-            },
-            "description": "User recovered successfully."
-          }
-        }
-      }
-    },
     "/planning/create/{id}": {
       "post": {
         "tags": [
